src/deploy/ymls/else/crawler-search-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: search-engine-db
  labels:
    app: crawler
    component: mongo
    search-engine-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: crawler
    component: mongo
    search-engine-db: "true"
