src/deploy/ymls/else/crawler-search-rabbitmq-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: search-engine-rmq
  labels:
    app: crawler
    component: rabbit
    search-engine-rmq: "true"
spec:
  ports:
  - name: "rabbitmq"
    protocol: "TCP"
    port: 5672
    targetPort: 5672
    nodePort: 0
  selector:
    app: crawler
    component: rabbit
    search-engine-rmq: "true"
