src/deploy/ymls/else/crawler-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-srvs
  labels:
    app: crawler
    component: search-engine
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: crawler
    component: search-engine
