src/deploy/ymls/else/crawler-ui-mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-ui-db
  labels:
    app: crawler
    component: mongo
    crawler-ui-db: "true"
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: crawler
    component: mongo
    crawler-ui-db: "true"
