src/deploy/ymls/else/ui-ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.provider: nginx
    meta.helm.sh/release-name: gitlab
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/custom-http-errors: ""
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
  creationTimestamp: "2022-08-11T08:25:52Z"
  generation: 1
  labels:
    app: kas
    app.kubernetes.io/managed-by: Helm
    chart: kas-6.2.2
    heritage: Helm
    release: gitlab
  name: gitlab-kas
  namespace: default
  resourceVersion: "2765"
  uid: a9171788-5d6f-476c-b26f-6f226ee29653
spec:
  ingressClassName: gitlab-nginx
  rules:
  - host: kas.ytr.apsago.com
    http:
      paths:
      - backend:
          service:
            name: gitlab-kas
            port:
              number: 8150
        path: /
        pathType: Prefix
      - backend:
          service:
            name: gitlab-kas
            port:
              number: 8154
        path: /k8s-proxy/
        pathType: Prefix
  tls:
  - hosts:
    - kas.ytr.apsago.com
    secretName: gitlab-kas-tls
